test bug fix in menu on Mobile

--- a/style.css
+++ b/style.css
@@ -1240,9 +1240,9 @@ strong {
 
   .nav__list {
     position: fixed;
-    inset-block-start: 72px;
-    /*top: 0; */
-    inset-inline: 0;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: rgba(253, 250, 245, 0.97);
     backdrop-filter: blur(16px);
     -webkit-backdrop-filter: blur(16px);
